<resources>
    <string name="app_name">tradix</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="skip">skip</string>
    <string name="text_tutorial_1_1">Start to invest\nfor your future!</string>
    <string name="text_tutorial_1_2">Ex totam praesentium incidunt aut.</string>
    <string name="next">Next</string>
    <string name="text_tutorial_2_1">Follow our tips\nto achieve success!</string>
    <string name="finish">Start</string>
    <string name="text_tutorial_3_1">Keep your\ninvestment safe</string>
    <string name="text_tutorial_3_2">Ex totam praesentium incidunt aut.</string>
    <string name="tradix">TRADIX</string>
    <string name="the_future_of_trading">The future of trading</string>
    <string name="welcome">Welcome!</string>
    <string name="e_mail">E-mail</string>
    <string name="pass">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="singup">Sing Up</string>
    <string name="login">Login</string>
    <string name="create">Create a free account</string>
    <string name="send">We have sent you an\nemail to change your\npassword</string>
    <string name="resend">Resend email</string>
    <string name="time_cd">Wait 5 seconds before sending it</string>
    <string name="password_change">Yay! Your password has been\nchanged!</string>
    <string name="tv_confirm_change_2">You can now log into your account\nwith the new password</string>
    <string name="home">home</string>
    <string name="coins">coins</string>
    <string name="news">news</string>
    <string name="menu">menu</string>
    <string name="index">Index</string>
    <string name="shares">shares</string>
    <string name="currencies">currencies</string>
    <string name="futures">FUTURES</string>
    <string name="text_disc">Illum velit nam voluptatum enim aut ratione ratione officiis totam.Mollitia eum sint tempora ducimus abcdefghjkl mno qrqd wui dxz </string>
    <string name="text_editorial">Rem deserunt voluptatem sapiente. Quod sint officiis quae magnam. Qui eaque atque quia.
        Incidunt dolor reiciendis tenetur libero error consequatur voluptate recusandae. Sequi voluptatum quas. Ullam voluptatem
        recusandae. Sequi voluptatum quas. Ullam voluptatem
        recusandae. Sequi voluptatum quas. Ullam voluptatem
        recusandae. Sequi voluptatum quas. Ullam voluptatem
        recusandae. Sequi voluptatum quas. Ullam voluptatem
        recusandae. Sequi voluptatum quas. Ullam voluptatem
        Incidunt dolor reiciendis tenetur libero error consequatur voluptate recusandae. Sequi voluptatum quas. Ullam voluptatem
        recusandae. Sequi voluptatum quas. Ullam voluptatem
        recusandae. Sequi voluptatum quas. Ullam voluptatem
        recusandae. Sequi voluptatum quas. Ullam voluptatem
        Incidunt dolor reiciendis tenetur libero error consequatur voluptate recusandae. Sequi voluptatum quas. Ullam voluptatem
        recusandae. Sequi voluptatum quas. Ullam voluptatem
        recusandae. Sequi voluptatum quas. Ullam voluptatem
        recusandae. Sequi voluptatum quas. Ullam voluptatem
        Incidunt dolor reiciendis tenetur libero error consequatur voluptate recusandae. Sequi voluptatum quas. Ullam voluptatem
        labore sit et quaerat sed. Dolorem libero earum ipsum
        labore sit et quaerat sed. Dolorem libero earum ipsum
        labore sit et quaerat sed. Dolorem libero earum ipsum
        labore sit et quaerat sed. Dolorem libero earum ipsum
        labore sit et quaerat sed. Dolorem libero earum ipsum Incidunt dolor reiciendis tenetur libero error consequatur voluptate recusandae. Sequi voluptatum quas
        Incidunt dolor reiciendis tenetur libero error consequatur voluptate recusandae. Sequi voluptatum quas
        Incidunt dolor reiciendis tenetur libero error consequatur voluptate recusandae. Sequi voluptatum quas
    </string>
    <string name="load_more">Load More</string>
</resources>