<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/shape_ll_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="@dimen/dp20"
    android:paddingVertical="@dimen/dp10">
    <com.google.android.material.button.MaterialButton
        app:cornerRadius="@dimen/dp20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/index"
        android:backgroundTint="@color/fuchsia"
        android:textSize="@dimen/sp12"
        android:fontFamily="@font/lato_regular"

         />
    <com.google.android.material.button.MaterialButton
        android:textSize="@dimen/sp12"
        android:fontFamily="@font/lato_regular"
        android:layout_marginStart="@dimen/dp20"
        app:cornerRadius="@dimen/dp10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shares"
        android:backgroundTint="@color/white_two"
        android:textColor="@color/black"
        style="?attr/borderlessButtonStyle"
        />
    <com.google.android.material.button.MaterialButton
        android:layout_marginStart="@dimen/dp20"
        app:cornerRadius="@dimen/dp10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/currencies"
        android:backgroundTint="@color/white_two"
        android:textColor="@color/black"
        style="?attr/borderlessButtonStyle"
        android:textSize="@dimen/sp12"
        android:fontFamily="@font/lato_regular"
        />
    <com.google.android.material.button.MaterialButton
        android:layout_marginStart="@dimen/dp20"
        app:cornerRadius="@dimen/dp10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/index"
        android:backgroundTint="@color/white_two"
        android:textColor="@color/black"
        style="?attr/borderlessButtonStyle"
        android:textSize="@dimen/sp12"
        android:fontFamily="@font/lato_regular"
        />
    <com.google.android.material.button.MaterialButton
        android:layout_marginStart="@dimen/dp20"
        app:cornerRadius="@dimen/dp10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/futures"
        android:backgroundTint="@color/white_two"
        android:textColor="@color/black"
        style="?attr/borderlessButtonStyle"
        android:textSize="@dimen/sp12"
        android:fontFamily="@font/lato_regular"
        />
    <com.google.android.material.button.MaterialButton
        android:layout_marginStart="@dimen/dp20"
        app:cornerRadius="@dimen/dp10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/index"
        android:backgroundTint="@color/white_two"
        android:textColor="@color/black"
        style="?attr/borderlessButtonStyle"
        android:textSize="@dimen/sp12"
        android:fontFamily="@font/lato_regular"
        />
</LinearLayout>