<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.ConfirmPasswordFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_confirm_1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/ic_componente_6_7"
        app:layout_constraintBottom_toTopOf="@+id/gl_confirm_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/raleway_black"
        android:text="@string/tradix"
        android:textColor="@color/black"
        android:textSize="@dimen/sp24"
        app:layout_constraintBottom_toTopOf="@+id/gl_confirm_1"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view" />

    <ImageView
        android:id="@+id/iv_coin_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp10"
        android:src="@drawable/ic_coin"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="@+id/textView" />

    <TextView
        android:id="@+id/tv_confirm_change_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/raleway_black"
        android:gravity="center"
        android:maxLines="2"
        android:text="@string/password_change"
        android:textColor="@color/color1"
        android:textSize="@dimen/sp20"
        app:layout_constraintBottom_toTopOf="@+id/gl_confirm_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
         />

    <TextView
        android:id="@+id/tv_confirm_change_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lato_light"
        android:gravity="center"
        android:text="@string/tv_confirm_change_2"
        android:textSize="@dimen/sp14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/gl_confirm_1" />

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/gl_confirm_2"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.75"/>

    <View
        android:id="@+id/view_2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/dp50"
        android:background="@drawable/ic_background_confirm_pass"
        app:layout_constraintBottom_toTopOf="@+id/gl_confirm_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/gl_confirm_1"
         />

    <Button
        android:id="@+id/btn_confirm_to_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp70"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/btn_shape_2"
        android:text="@string/login"
        android:textSize="@dimen/sp14"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tv_confirm_change_2"
        app:layout_constraintStart_toStartOf="@+id/tv_confirm_change_2"
        app:layout_constraintTop_toTopOf="@+id/gl_confirm_2" />


</androidx.constraintlayout.widget.ConstraintLayout>